# learning-haskell

./: .gitignore  README.md
effective-haskell/: README.md
effective-haskell/ch05-projects/: CHANGELOG.md  ch05-projects.cabal
effective-haskell/ch05-projects/app/: Main.hs
effective-haskell/ch05-projects/src/: CreatingModules.hs  MyLib.hs
effective-haskell/ch06-type-classes/: CHANGELOG.md  LICENSE  ch06-type-classes.cabal
effective-haskell/ch06-type-classes/app/: Main.hs
effective-haskell/ch06-type-classes/src/: NaturalClass.hs
get-programming-with-haskell/: README.md
get-programming-with-haskell/unit6/: README.md
get-programming-with-haskell/unit6/lesson35/: README.md
get-programming-with-haskell/unit6/palindrome-checker/: palindrome-checker.cabal
get-programming-with-haskell/unit6/palindrome-testing/: package.yaml  palindrome-testing.cabal  stack.yaml
get-programming-with-haskell/unit6/palindrome-testing/app/: Main.hs
get-programming-with-haskell/unit6/palindrome-testing/src/: Lib.hs
get-programming-with-haskell/unit7/: README.md
get-programming-with-haskell/unit7/http-json-example/: CHANGELOG.md  README.md  http-json-example.cabal  package.yaml  stack.yaml
get-programming-with-haskell/unit7/lesson35/: README.md
get-programming-with-haskell/unit7/sqlite-example/: CHANGELOG.md  README.md  package.yaml  sqlite-example.cabal  stack.yaml
get-programming-with-haskell/unit7/sqlite-example/src/: Lib.hs
graphs/: context.drawio
learn-yesod/: README.md  package.yaml  stack.yaml
learn-yesod/config/: keter.yml  settings.yml  test-settings.yml
(+9 files in other folders)
