cabal-version:      2.4
name:               ch06-type-classes
version:            0.1.0.0
synopsis:           A sample project to lean type classes.
-- description:
license:            MIT
license-file:       LICENSE
author:             zhoujiagen
maintainer:         zhoujiagen@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib, NaturalClass
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable ch06-type-classes
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        ch06-type-classes

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ch06-type-classes-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        ch06-type-classes
